--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header bg-dark">
         <nav class="navbar section-center">
          <div class="logo-container">
-            <img src="/food-blog/images/1200px-Hotel_Ibis_logo_2012.png" width="100px" height="100px" alt="logo" class="logo">
+            <img src="./food-blog/images/1200px-Hotel_Ibis_logo_2012.png" width="100px" height="100px" alt="logo" class="logo">
          </div>
          <ul class="list-container ">
             <li class="list-item">
