--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
     <header class="header bg-dark">
         <nav class="navbar section-center">
          <div class="logo-container">
-<<<<<<< HEAD
-            <img src="https://wallpaperaccess.com/chinese-cuisine" width="100px" height="100px" alt="logo" class="logo">
-=======
-            <img src="./food-blog/images/1200px-Hotel_Ibis_logo_2012.png" width="100px" height="100px" alt="logo" class="logo">
->>>>>>> f5915149aee5590b7b8bb4a9fe76fbc28be6928f
+            <img src="./stylesheet/images/1200px-Hotel_Ibis_logo_2012.png" alt="logo">
          </div>
          <ul class="list-container ">
             <li class="list-item">
