new changes img crd 4

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
             <h2 class="section-title text-dark txt-center">Some Random Information</h2>
             <div class="card-container">
              <article class="card">
-                <img src="/food-blog/images/4337518.jpg" alt="one" class="card-img">
+                <img src="./stylesheet/images/4337518.jpg" alt="one" class="card-img">
                 <p class="card-description text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias, ut.</p>
              </article>
              <article class="card">
-                <img src="/food-blog/images/4337518.jpg" alt="two" class="card-img">
+                <img src="./stylesheet/images/4337518.jpg" alt="two" class="card-img">
                 <p class="card-description text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias, ut.</p>
              </article>
              <article class="card">
-                <img src="/food-blog/images/4337518.jpg" alt="three" class="card-img">
+                <img src="./stylesheet/images/4337518.jpg" alt="three" class="card-img">
                 <p class="card-description text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias, ut.</p>
              </article>
              <article class="card">
-                <img src="/food-blog/images/4337518.jpg" alt="four" class="card-img">
+                <img src="./stylesheet/images/4337518.jpg" alt="four" class="card-img">
                 <p class="card-description text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias, ut.</p>
              </article>
             </div>
