right image change 4

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button class="btn">Sign up</button>
             </div>
             <div class="hero-right-container">
-                <img src="/food-blog/images/4337518.jpg" alt="food" class="hero-right-image">
+                <img src="./stylesheet/images/4337518.jpg" alt="food" class="hero-right-image">
             </div>
         </div>.
     </header>
